frontend/tests/cases/negative/polymorphism/adt.gr
data Maybe a where
  Nothing : Maybe a;
  Just : a → Maybe a

data Bad where
  Yuck : Maybe → Bad
